--- a/main.html
+++ b/main.html
@@ -4,10 +4,55 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+    
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+    <table>
+        <thead>
+            <th>Part</th>
+            <th>XL</th>
+            <th>S</th>
+            <th>M</th>
+            <th>L</th>
+            <th>XL</th>
+        </thead>
+        <tbody>
+            <tr class="color">
+                <td>waist</td>
+                <td>25</td>
+                <td>28</td>
+                <td>30</td>
+                <td>31</td>
+                <td>32</td>
+            </tr>
+            <tr class="dcolor">
+                <td>chest</td>
+                <td>34</td>
+                <td>34</td>
+                <td>38</td>
+                <td>40</td>
+                <td>41</td>
+            </tr>
+            <tr>
+                <td>sleeve</td>
+                <td>23</td>
+                <td>24</td>
+                <td>24</td>
+                <td>25</td>
+                <td>25</td>
+            </tr>
+            <tr>
+                <td>waist</td>
+                <td>25</td>
+                <td>28</td>
+                <td>30</td>
+                <td>31</td>
+                <td>32</td>
+            </tr>
+        </tbody>
+    </table>
     <script type="text/javascript" src="./script.js">
 </script>
 
